[package]
name = "scrabtopus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
log = "0.4"
env_logger = "0.10"
regex = "1.7"
robotstxt = "0.3"
rand = "0.8"
headless_chrome = "1.0.14"
